# api/docs/swagger.json
@@ -2,10 +2,10 @@
   "schemes": ["https"],
   "swagger": "2.0",
   "info": {
-    "description": "API to send SMS messages using android [SmsManager](https://developer.android.com/reference/android/telephony/SmsManager) via HTTP",
+    "description": "Use your Android phone to send and receive SMS messages via a simple programmable API with end-to-end encryption.",
     "title": "httpSMS API Reference",
     "contact": {
-      "name": "HTTP SMS",
+      "name": "support@httpsms.com",
       "email": "support@httpsms.com"
     },
     "license": {
@@ -133,11 +133,20 @@
             "ApiKeyAuth": []
           }
         ],
-        "description": "Sends bulk SMS messages to multiple users from a CSV file.",
-        "consumes": ["application/json"],
+        "description": "Sends bulk SMS messages to multiple users from a CSV or Excel file.",
+        "consumes": ["multipart/form-data"],
         "produces": ["application/json"],
         "tags": ["BulkSMS"],
         "summary": "Store bulk SMS file",
+        "parameters": [
+          {
+            "type": "file",
+            "description": "The Excel or CSV file formatted according to the templates",
+            "name": "document",
+            "in": "formData",
+            "required": true
+          }
+        ],
         "responses": {
           "202": {
             "description": "Accepted",
@@ -3323,7 +3332,7 @@
           "example": "153554b5-ae44-44a0-8f4f-7bbac5657ad4"
         },
         "send_at": {
-          "description": "SendAt is an optional parameter used to schedule a message to be sent at a later time",
+          "description": "SendAt is an optional parameter used to schedule a message to be sent in the future. The time is considered to be in your profile's local timezone.",
           "type": "string",
           "example": "2022-06-05T14:26:09.527976+03:00"
         },
